[DESIGN] Fixed spacing in CAT section

--- a/src/modules/cat/cat.styl
+++ b/src/modules/cat/cat.styl
@@ -1,14 +1,35 @@
 #cat
     background: #5E6977;
-    margin-top: -127px;
-    padding: 240px 0 110px 0;
-    padding-top: 240px;
+    color: #D1D4D8;
+    margin-top: -128px;
+    padding: 270px 0 100px 0;
     text-align: center;
 
+    h1
+        color: #FFF;
+        margin-top: -13px;
+
+    header
+        padding-bottom: 40px;
+
+    .btn-primary
+        font-size: 16px;
+        height: 56px;
+        margin-bottom: 50px;
+        min-width: 165px;
+        padding: 0;
+
     .client-list
+        padding-bottom: 3px;
+
         img
             opacity: 0.25;
             max-width: 100%;
+
+        p
+            font-size: 18px;
+            font-weight: 300;
+            padding-bottom: 25px;
 
     .btn-primary
         background: #7dc855;
